<resources>
    <string name="app_name">ServiceExample</string>
    <string name="start_service_button_text">Start Service</string>
    <string name="stop_service_button_text">Stop Service</string>
    <string name="start_intent_service_button_text">Start Intent Service</string>
    <string name="stop_intent_service_button_text">Stop intent Service</string>
    <string name="bind_service_button_text">Bind Service</string>
    <string name="unbind_service_button_text">Unbind Service</string>
    <string name="enter_number">Enter number</string>
    <string name="find_factorial_button_text">Find Factorial</string>
</resources>
