<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/start_service_button"
        android:text="@string/start_service_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp" />

    <Button
        android:id="@+id/stop_service_button"
        android:text="@string/stop_service_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp" />

    <Button
        android:id="@+id/start_intent_service_button"
        android:text="@string/start_intent_service_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp" />

    <Button
        android:id="@+id/stop_intent_service_button"
        android:text="@string/stop_intent_service_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp" />

    <Button
        android:id="@+id/bind_service_button"
        android:text="@string/bind_service_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp" />

    <EditText
        android:id="@+id/number_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_number"
        android:layout_margin="8dp" />

    <Button
        android:id="@+id/find_factorial_button"
        android:text="@string/find_factorial_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp" />

    <Button
        android:id="@+id/unbind_service_button"
        android:text="@string/unbind_service_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp" />
</LinearLayout>